tho-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: www-haproxy
  labels:
    app.kubernetes.io/name: wordpress
spec:
  host: www.ocp.lan
  path: "/"
  to:
    kind: Service
    name: wordpress
  port: 
    targetPort: 8080
